chore: Set `PackageOutputPath` to `packages/` if `BuildingInsideVisualStudio=true`

--- a/settings/sln.build.props
+++ b/settings/sln.build.props
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <DirectoryPackagesPropsPath>$([MSBuild]::NormalizePath('$(SolutionDir)', 'Directory.Packages.props'))</DirectoryPackagesPropsPath>
+    <PackageOutputPath Condition=" '$(BuildingInsideVisualStudio)' == 'true' ">$([MSBuild]::NormalizePath('$(SolutionDir)', 'packages'))</PackageOutputPath>
   </PropertyGroup>
 
   <PropertyGroup Label="Prepare Directories">
