--- a/settings/sln.build.props
+++ b/settings/sln.build.props
@@ -51,7 +51,7 @@
   </PropertyGroup>
 
   <PropertyGroup Label="Settings for test projects" Condition=" '$(IsTestableProject)' == 'true' ">
-    <NoWarn>$(NoWarn);CS8604;CA2007;</NoWarn>
+    <NoWarn>$(NoWarn);CS8604;CA2007;S4144</NoWarn>
   </PropertyGroup>
 
   <PropertyGroup Label="Language Configuration">
