--- a/settings/src.build.props
+++ b/settings/src.build.props
@@ -1,6 +1,7 @@
 <Project>
 
   <ItemGroup Label="Test compability">
+    <InternalsVisibleTo Include="$(MSBuildProjectName).Tests.Architecture" />
     <InternalsVisibleTo Include="$(MSBuildProjectName).Tests.Unit" />
     <InternalsVisibleTo Include="$(MSBuildProjectName).Tests.Integration" />
   </ItemGroup>
