--- a/settings/sln.build.props
+++ b/settings/sln.build.props
@@ -1,7 +1,7 @@
 <Project>
 
   <PropertyGroup Condition=" '$(SolutionName)' == 'develop' ">
-    <DirectoryPackagesPropsPath>$([MSBuild]::NormalizePath('$(SolutionDir)', 'Directory.Packages.props'))</DirectoryPackagesPropsPath>
+    <!-- <DirectoryPackagesPropsPath>$([MSBuild]::NormalizePath('$(SolutionDir)', 'Directory.Packages.props'))</DirectoryPackagesPropsPath> -->
     <PackageOutputPath Condition=" '$(BuildingInsideVisualStudio)' == 'true' ">$([MSBuild]::NormalizePath('$(SolutionDir)', 'packages'))</PackageOutputPath>
   </PropertyGroup>
 
