feat: Added new rule NEP008 PackageReleaseNotes

--- a/settings/targets/ValidatePackageProperties.targets
+++ b/settings/targets/ValidatePackageProperties.targets
@@ -18,6 +18,7 @@
     <Warning Code="NEP005" Text="The package project url must be provided." File="$(MSBuildProjectFile)" Condition="'$(ElevateWarningsToError)' != 'true' and '$(PackageProjectUrl)' == ''" />
     <Warning Code="NEP006" Text="The package repository url must be provided." File="$(MSBuildProjectFile)" Condition="'$(ElevateWarningsToError)' != 'true' and '$(RepositoryUrl)' == ''" />
     <Warning Code="NEP007" Text="Missing property `&lt;CopyrightYearStart&gt;`, which specifies the start of the copyright." File="$(MSBuildProjectFile)" Condition="'$(ElevateWarningsToError)' != 'true' and '$(CopyrightYearStart)' == ''" />
+    <Warning Code="NEP008" Text="The package release notes must be provided." File="$(MSBuildProjectFile)" Condition="'$(ElevateWarningsToError)' != 'true' and '$(PackageReleaseNotes)' == ''" />
 
     <!-- If $(ElevateWarningsToError) is false, only Warnings will be raised. -->
     <Error Code="NEP001" Text="The package id must be provided." File="$(MSBuildProjectFile)" Condition="'$(ElevateWarningsToError)' == 'true' and '$(PackageId)' == ''" />
@@ -27,6 +28,7 @@
     <Error Code="NEP005" Text="The package project url must be provided." File="$(MSBuildProjectFile)" Condition="'$(ElevateWarningsToError)' == 'true' and '$(PackageProjectUrl)' == ''" />
     <Error Code="NEP006" Text="The package repository url must be provided." File="$(MSBuildProjectFile)" Condition="'$(ElevateWarningsToError)' == 'true' and '$(RepositoryUrl)' == ''" />
     <Error Code="NEP007" Text="Missing property `&lt;CopyrightYearStart&gt;`, which specifies the start of the copyright." File="$(MSBuildProjectFile)" Condition="'$(ElevateWarningsToError)' == 'true' and '$(CopyrightYearStart)' == ''" />
+    <Error Code="NEP008" Text="The package release notes must be provided." File="$(MSBuildProjectFile)" Condition="'$(ElevateWarningsToError)' == 'true' and '$(PackageReleaseNotes)' == ''" />
 
   </Target>
 
