--- a/configurations/global.editorconfig
+++ b/configurations/global.editorconfig
@@ -164,3 +164,8 @@ csharp_style_expression_bodied_local_functions              = false : silent
 
 # Use Compound assignment
 dotnet_style_prefer_compound_assignment                     = false
+
+# Prefer if-else statement
+dotnet_style_prefer_conditional_expression_over_return      = false
+dotnet_diagnostic.IDE0046.severity = none
+
