--- a/configurations/global.editorconfig
+++ b/configurations/global.editorconfig
@@ -171,4 +171,4 @@ dotnet_diagnostic.IDE0046.severity                                      = sugges
 
 # Prefer standard constructors
 csharp_style_prefer_primary_constructors                                = false
-dotnet_diagnostic.IDE0290.severity                                      = 
+dotnet_diagnostic.IDE0290.severity                                      = suggestion
