--- a/configurations/global.editorconfig
+++ b/configurations/global.editorconfig
@@ -172,3 +172,20 @@ dotnet_diagnostic.IDE0046.severity                                      = sugges
 # Prefer standard constructors
 csharp_style_prefer_primary_constructors                                = false
 dotnet_diagnostic.IDE0290.severity                                      = suggestion
+
+# [CSharpier] Incompatible rules deactivated 
+# https://csharpier.com/docs/IntegratingWithLinters#code-analysis-rules
+dotnet_diagnostic.IDE0055.severity                                      = none
+dotnet_diagnostic.SA1000.severity                                       = none
+dotnet_diagnostic.SA1009.severity                                       = none
+dotnet_diagnostic.SA1111.severity                                       = none
+dotnet_diagnostic.SA1118.severity                                       = none
+dotnet_diagnostic.SA1137.severity                                       = none
+dotnet_diagnostic.SA1413.severity                                       = none
+dotnet_diagnostic.SA1500.severity                                       = none
+dotnet_diagnostic.SA1501.severity                                       = none
+dotnet_diagnostic.SA1502.severity                                       = none
+dotnet_diagnostic.SA1504.severity                                       = none
+dotnet_diagnostic.SA1515.severity                                       = none
+dotnet_diagnostic.SA1516.severity                                       = none
+
