--- a/settings/tests.build.props
+++ b/settings/tests.build.props
@@ -5,7 +5,7 @@
     <IsPublishable>false</IsPublishable>
     <IsPackable>false</IsPackable>
 
-    <NoWarn>$(NoWarn);1591;CA1707;IDE1006;VSTHRD200;CA1822</NoWarn>
+    <NoWarn>$(NoWarn);1591;CA1707;IDE1006;VSTHRD200;CA1822;CA1515</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
